# DepthTensor

./: .gitignore  CHANGELOG.md  README.md  example.example_1.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: publish.yml
csrc/bindings/: bind_nn.cpp  main.cpp
csrc/cpu/nn/: activations.cpp
csrc/include/nn/: activations.h
example/: example.py  example_1.py  ext.py
src/DTensor/: __init__.py  autodiff.py  cpu.py  exceptions.py  gpu.py  tensor.py  tensor.pyi  types.py
src/DTensor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/DTensor/_core/: api.py  utils.py
src/DepthTensor/: __init__.py  autodiff.py  cpu.py  tensor.py  types.py  typing.py
src/DepthTensor/_core/: __init__.py  exceptions.py  utils.py
src/DepthTensor/_core/nn/: __init__.py
src/DepthTensor/_core/nn/_backend/: __init__.py  activation_functions.py
src/DepthTensor/_core/nn/functional/: __init__.py  activation_functions.py
src/DepthTensor/_core/ops/: comparison.py  creation.py  diff.py  elementwise.py  function.py  reduction.py
src/DepthTensor/_core/random/: generator.py
src/DepthTensor/_ext/: __init__.pyi  nn.pyi
src/DepthTensor/enum/: __init__.py  initialize_grad.py
src/example/: example.py
tests/: test.py  test_autodiff.py  test_autodiff_extended.py  test_ops_forward.py  test_tensor.py  test_tensor_errors.py  test_tensor_init.py  testconfig.py
