[build-system]
requires = ["setuptools>=61.0.0", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "depthtensor"
version = "2.9.0rc2"
description = "A Hardware-Accelerated Tensor Computation and Autograd Engine"
readme = "README.md"
authors = [
    { name = "Ha Hong Le", email = "lehahong1310@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",                   
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"
dependencies = [
    "numpy"
]

[project.optional-dependencies]
cuda = [
    "cupy"
]

[project.urls]
"Homepage" = "https://github.com/l-h-ha/DepthTensor"
"Bug Tracker" = "https://github.com/l-h-ha/DepthTensor/issues"

[tool.setuptools.packages.find]
where = ["src"]